// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders column_width properly 1`] = `
<div
  className="sc-bdVaJa kbVsCx"
>
  <div
    className="file__Text-s1yhnyww-0 dJtiDC"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Hello, world!</p>",
      }
    }
  />
</div>
`;

exports[`renders fillwidth properly 1`] = `
<div
  className="sc-bdVaJa eMrCRa"
>
  <div
    className="file__Text-s1yhnyww-0 dJtiDC"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Hello, world!</p>",
      }
    }
  />
</div>
`;

exports[`renders overflow_fillwidth properly 1`] = `
<div
  className="sc-bdVaJa biUCak"
>
  <div
    className="file__Text-s1yhnyww-0 dJtiDC"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Hello, world!</p>",
      }
    }
  />
</div>
`;
